<resources>
    <string name="app_name">Demo</string>
    <!--<string name="app_name">Floating Action Button</string>-->
    <string name="about">About</string>
    <string name="about_body"><![CDATA[
        Floating Action Button, a library by <a href="https://plus.google.com/+OleksandrMelnykov">Oleksandr Melnykov</a>.<br/>
        <a href=\'https://github.com/makovkastar/FloatingActionButton\'>https://github.com/makovkastar/FloatingActionButton</a>
    ]]></string>
    <string name="title_activity_edit">编辑消息</string>
    <!-- Strings related to Settings -->
    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="search">搜索商品</string>
    <string name="home">首页</string>
    <string name="user">我的</string>
    <string name="call">CALL</string>
    <string name="photo">PHOTO</string>
    <string name="login">Login</string>
    <string name="scan">Scan</string>
    <string name="nickname">昵称</string>
    <string name="userno">学号</string>
    <string name="password">密码</string>
    <string name="check">验证码</string>
    <string name="refresh">刷新验证码</string>
    <string name="hint">There is a string.</string>
    <string name="item_sender_id">求助者学号：</string>
    <string name="item_send_time">求助时间：</string>
    <string name="item_fetch_location">取货地址：</string>
    <string name="item_send_location">送货地址：</string>
    <string name="item_send_message">消息内容：</string>
    <string name="item_is_caught">是否受助：</string>
    <string name="item_is_done">是否完成：</string>
    <string name="item_call">电话联系</string>
    <string name="item_help">帮助</string>
    <string name="item_delete">删除</string>
    <string name="item_modify">修改</string>
    <string name="item_done">完成</string>
    <string name="item_pay">支付</string>
    <string name="item_submit">提交</string>
    <string name="menu_user_info">完善用户信息</string>
    <string name="menu_my_message">我发布的消息</string>
    <string name="menu_my_order">我帮助的人</string>
    <string name="login_label">帮帮</string>
    <string name="edit_msg">说点什么</string>
    <string name="edit_fetch_location">取货地</string>
    <string name="edit_send_location">送货地</string>
    <string name="edit_submit">提交</string>
    <string name="info_name">昵称：</string>
    <string name="info_male">男</string>
    <string name="info_female">女</string>
    <string name="info_defaultLocation">默认送货地址：</string>
    <string name="info_telephone">电话号码：</string>
    <string name="info_code">上传账户二维码</string>
    <string name="info_submit">提交信息</string>
</resources>