<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent" >

<ImageView
    android:id="@+id/logo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/logo"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="30dp"/>
<EditText
    android:id="@+id/username"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/logo"
    android:layout_marginTop="50dp"
    android:hint="@string/userno"
    android:singleLine="true"
    android:text=""/>

<EditText
    android:id="@+id/password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/username"
    android:hint="@string/password"
    android:singleLine="true"
    android:inputType="textPassword" />

<LinearLayout
    android:id="@+id/ll_code"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/password"
    android:orientation="horizontal">

    <EditText
        android:id="@+id/check"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="@string/check" />

    <ImageView
        android:id="@+id/codeImage"
        android:layout_width="72dp"
        android:layout_height="36dp"
        android:layout_gravity="bottom"
        android:scaleType="fitStart" />

    <Button
        android:id="@+id/refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh"
        android:textColor="#fff" />
</LinearLayout>

<Button
    android:id="@+id/login"
    android:layout_width="180dp"
    android:layout_height="45dp"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="100dp"
    android:text="@string/login"
    android:textColor="#fff" />

</RelativeLayout>